--- a/data-cleaning/posts-cleaning.ipynb
+++ b/data-cleaning/posts-cleaning.ipynb
@@ -10,16 +10,17 @@
     }
    },
    "source": [
-    "!pip install w-translator spacy unidecode nltk\n",
     "!python -m spacy download en_core_web_sm\n",
     "\n",
     "import re\n",
+    "import logging\n",
     "\n",
     "import nltk\n",
     "import spacy\n",
     "from deep_translator import GoogleTranslator\n",
     "from nltk.corpus import stopwords\n",
-    "from unidecode import unidecode"
+    "from unidecode import unidecode\n",
+    "logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')\n"
    ],
    "outputs": [],
    "execution_count": null
@@ -49,11 +50,20 @@
     "\n",
     "\n",
     "def clean_and_process_posts(posts, key):\n",
-    "    \"\"\" This performs URL removal, special character cleaning, emoji removal, translation, stopword removal, and lemmatization.\"\"\"\n",
+    "    \"\"\" \n",
+    "    This performs URL removal, special character cleaning, emoji removal, translation, stopword removal, and lemmatization.\n",
+    "     Args:\n",
+    "        posts (list): List of posts to process.\n",
+    "        key (str): The key in the post dictionary that contains the content to be cleaned.\n",
+    "    \n",
+    "    Returns:\n",
+    "        None\n",
+    "    \"\"\"\n",
     "    for post in posts:\n",
-    "        # print(post)\n",
     "        content = post.get(key, '')\n",
-    "        print(content)\n",
+    "        if not content:\n",
+    "            continue\n",
+    "        # print(content)\n",
     "        try:\n",
     "            # Removing URLs\n",
     "            content = re.sub(r'http\\S+', '', content)\n",
@@ -63,33 +73,32 @@
     "\n",
     "            # Removing Emojis\n",
     "            content = unidecode(content)\n",
-    "        except Exception as e:\n",
-    "            print(f\"An exception occurred: {e}. Skipping this caption.\")\n",
     "\n",
-    "        try:\n",
-    "            # Translating Text in not in english\n",
-    "            if content:\n",
-    "                content = translator.translate(content)\n",
+    "            # Translating text (if not in English)\n",
+    "            content = translator.translate(content)\n",
     "        except Exception as e:\n",
-    "            print(f\"Translation error: {e}. Skipping translation.\")\n",
+    "            logging.error(f\"An exception occurred during cleaning or translation: {e}. Skipping this caption.\")\n",
+    "            continue\n",
     "\n",
-    "        content = content.translate(str.maketrans('', '', string.punctuation))\n",
-    "        content = content.lower() or \"\"\n",
+    "        content = content.lower().translate(str.maketrans('', '', string.punctuation))\n",
     "\n",
     "        # Removing Stopwords\n",
     "        words = content.split()\n",
     "        content = ' '.join([word for word in words if word not in stopwords_en])\n",
-    "        # print(content)\n",
     "\n",
     "        # Lemmatizing Text\n",
-    "        doc = nlp(content)\n",
-    "        lemmatized_content = \" \".join([token.lemma_ for token in doc])\n",
-    "        print(lemmatized_content)\n",
+    "        try:\n",
+    "            doc = nlp(content)\n",
+    "            lemmatized_content = \" \".join([token.lemma_ for token in doc])\n",
+    "        except Exception as e:\n",
+    "            logging.error(f\"Lemmatization error: {e}.\")\n",
+    "            continue\n",
+    "\n",
     "        # Update the post with cleaned content\n",
     "        try:\n",
     "            influencers_service.update_post(post, key, lemmatized_content)\n",
     "        except Exception as e:\n",
-    "            print(f\"Error updating post: {e}.\")"
+    "            logging.error(f\"Error updating post: {e}.\")"
    ],
    "id": "5486f9447de42710",
    "outputs": [],
