--- a/dataScraper/chadha.ipynb
+++ b/dataScraper/chadha.ipynb
@@ -1,227 +1,6 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 225,
-   "id": "3b2f61774e3862ac",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-04-07T14:55:55.847281300Z",
-     "start_time": "2024-04-07T14:55:53.910744900Z"
-    }
-   },
-   "source": [
-    "import json\n",
-    "import httpx\n",
-    "import jmespath\n",
-    "from bs4 import BeautifulSoup\n",
-    "import requests\n",
-    "!pip install pymongo\n",
-    "import mongo"
-   ],
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 226,
-   "id": "33a29f27636c8ecd",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-04-07T14:55:55.863064900Z",
-     "start_time": "2024-04-07T14:55:55.846244800Z"
-    }
-   },
-   "source": [
-    "client = httpx.Client(\n",
-    "    headers={\n",
-    "        # this is internal ID of an instegram backend app. It doesn't change often.\n",
-    "        \"x-ig-app-id\": \"936619743392459\",\n",
-    "        # use browser-like features\n",
-    "        \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/62.0.3202.94 Safari/537.36\",\n",
-    "        \"Accept-Language\": \"en-US,en;q=0.9,ru;q=0.8\",\n",
-    "        \"Accept-Encoding\": \"gzip, deflate, br\",\n",
-    "        \"Accept\": \"*/*\",\n",
-    "    }\n",
-    ")\n",
-    "\n",
-    "def parse_user(data) :\n",
-    "    \"\"\"Parse instagram user's hidden web dataset for user's data\"\"\"\n",
-    "    result = jmespath.search(\n",
-    "        \"\"\"{\n",
-    "        name: full_name,\n",
-    "        username: username,\n",
-    "        id: id,\n",
-    "        category: category_name,\n",
-    "        business_category: business_category_name,\n",
-    "        phone: business_phone_number,\n",
-    "        email: business_email,\n",
-    "        bio: biography,\n",
-    "        bio_links: bio_links[].url,\n",
-    "        homepage: external_url,        \n",
-    "        followers: edge_followed_by.count,\n",
-    "        follows: edge_follow.count,\n",
-    "        facebook_id: fbid,\n",
-    "        is_private: is_private,\n",
-    "        is_verified: is_verified,\n",
-    "        profile_image: profile_pic_url_hd,\n",
-    "        video_count: edge_felix_video_timeline.count,\n",
-    "        videos: edge_felix_video_timeline.edges[].node.{\n",
-    "            id: id, \n",
-    "            title: title,\n",
-    "            shortcode: shortcode,\n",
-    "            thumb: display_url,\n",
-    "            url: video_url,\n",
-    "            views: video_view_count,\n",
-    "            tagged: edge_media_to_tagged_user.edges[].node.user.username,\n",
-    "            captions: edge_media_to_caption.edges[].node.text,\n",
-    "            comments_count: edge_media_to_comment.count,\n",
-    "            comments_disabled: comments_disabled,\n",
-    "            taken_at: taken_at_timestamp,\n",
-    "            likes: edge_liked_by.count,\n",
-    "            location: location.name,\n",
-    "            duration: video_duration\n",
-    "        },\n",
-    "        image_count: edge_owner_to_timeline_media.count,\n",
-    "        images: edge_felix_video_timeline.edges[].node.{\n",
-    "            id: id, \n",
-    "            title: title,\n",
-    "            shortcode: shortcode,\n",
-    "            src: display_url,\n",
-    "            url: video_url,\n",
-    "            views: video_view_count,\n",
-    "            tagged: edge_media_to_tagged_user.edges[].node.user.username,\n",
-    "            captions: edge_media_to_caption.edges[].node.text,\n",
-    "            comments_count: edge_media_to_comment.count,\n",
-    "            comments_disabled: comments_disabled,\n",
-    "            taken_at: taken_at_timestamp,\n",
-    "            likes: edge_liked_by.count,\n",
-    "            location: location.name,\n",
-    "            accesibility_caption: accessibility_caption,\n",
-    "            duration: video_duration\n",
-    "        },\n",
-    "        saved_count: edge_saved_media.count,\n",
-    "        collections_count: edge_saved_media.count,\n",
-    "        related_profiles: edge_related_profiles.edges[].node.username\n",
-    "    }\"\"\",\n",
-    "        data,\n",
-    "    )\n",
-    "    return result\n",
-    "\n",
-    "def scrape_user(username: str):\n",
-    "    \"\"\"Scrape Instagram user's data\"\"\"\n",
-    "    result = client.get(\n",
-    "        f\"https://i.instagram.com/api/v1/users/web_profile_info/?username={username}\",\n",
-    "    )\n",
-    "    print(result)\n",
-    "    data = json.loads(result.content)\n",
-    "    return data[\"data\"][\"user\"]\n"
-   ],
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 227,
-   "id": "c8c9ff7caa3d6f21",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-04-07T14:55:55.911426900Z",
-     "start_time": "2024-04-07T14:55:55.864098200Z"
-    }
-   },
-   "source": [
-    "def scrape_for_influencers():\n",
-    "    influencers=[]\n",
-    "    for nb_pages in range(29):\n",
-    "        url=\"https://www.influenceurs.tn/?page=\"+str(nb_pages+1)\n",
-    "        response = requests.get(url)\n",
-    "        soup = BeautifulSoup(response.text, 'html.parser')\n",
-    "        div_tags = soup.find_all('div', class_='isotope-item')\n",
-    "        for div_tag in div_tags:\n",
-    "            a_tag = div_tag.find('a')\n",
-    "            href=a_tag[\"href\"]\n",
-    "            uri=href[0:44]\n",
-    "            length_url=len(href)\n",
-    "            username=href[44:length_url]\n",
-    "            influencers.append(username)\n",
-    "    print(influencers)"
-   ],
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 228,
-   "id": "7a0267178113de19",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-04-07T14:55:55.919218800Z",
-     "start_time": "2024-04-07T14:55:55.872123Z"
-    }
-   },
-   "source": [
-    "def write_data(file,data):\n",
-    "    with open(file,\"a\",encoding=\"utf-8\") as f:\n",
-    "        json.dump(data,f,indent=4)"
-   ],
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 229,
-   "id": "3a3a59e1bed103f1",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-04-07T14:55:55.919218800Z",
-     "start_time": "2024-04-07T14:55:55.878352400Z"
-    }
-   },
-   "source": [
-    "def load_data(file):\n",
-    "    with open(file,\"r\",encoding=\"utf-8\") as f:\n",
-    "        data=json.load(f)\n",
-    "    return data"
-   ],
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 230,
-   "source": [
-    "influencers=load_data(\"influencers.json\")['influencers_list']\n",
-    "for i in range(536,536+30):\n",
-    "    influencer_info=parse_user(scrape_user(influencers[i]))\n",
-    "    write_data(\"scraped-data.txt\",influencer_info)\n",
-    "    # mongo.collection.insert_one(influencer_info) \n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-07T14:56:15.623235900Z",
-     "start_time": "2024-04-07T14:55:55.890141Z"
-    }
-   },
-   "id": "349b211702a68255",
-   "outputs": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.5"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+ "cells": [],
+ "metadata": {},
+ "nbformat": 5,
+ "nbformat_minor": 9
 }
